force-app/main/default/objects/Steel_delivery__c/Steel_delivery__c.object-meta.xml
<CustomObject>
    <label>納品トン数</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>納品トン数名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>