force-app/main/default/objects/Steel_delivery__c/fields/Add__c.field-meta.xml
<CustomField>
    <fullName>Add__c</fullName>
    <defaultValue>false</defaultValue>
    <label>追加</label>
    <type>Checkbox</type>
</CustomField>