force-app/main/default/objects/Steel_delivery__c/fields/addition1__c.field-meta.xml
<CustomField>
    <fullName>addition1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>追加①</label>
    <type>Checkbox</type>
</CustomField>