force-app/main/default/objects/Steel_delivery__c/fields/addition2__c.field-meta.xml
<CustomField>
    <fullName>addition2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>追加②</label>
    <type>Checkbox</type>
</CustomField>