force-app/main/default/objects/Steel_delivery__c/fields/ContractQuantityGoal__c.field-meta.xml
<CustomField>
    <fullName>ContractQuantityGoal__c</fullName>
    <label>目標契約数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>