force-app/main/default/objects/Steel_delivery__c/fields/ContractUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ContractUnitPrice__c</fullName>
    <formula>OrderAmount__c  /  ContractQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>