force-app/main/default/objects/Steel_delivery__c/fields/gouizikou__c.field-meta.xml
<CustomField>
    <fullName>gouizikou__c</fullName>
    <defaultValue>false</defaultValue>
    <label>合意事項</label>
    <type>Checkbox</type>
</CustomField>