force-app/main/default/objects/Steel_delivery__c/fields/jissizyoukyou__c.field-meta.xml
<CustomField>
    <fullName>jissizyoukyou__c</fullName>
    <label>実施状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>