force-app/main/default/objects/Steel_delivery__c/fields/kanseicheck__c.field-meta.xml
<CustomField>
    <fullName>kanseicheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>完成チェック</label>
    <type>Checkbox</type>
</CustomField>