force-app/main/default/objects/Steel_delivery__c/fields/kyougouzyouhou__c.field-meta.xml
<CustomField>
    <fullName>kyougouzyouhou__c</fullName>
    <label>競合情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>