force-app/main/default/objects/Steel_delivery__c/fields/misei1check__c.field-meta.xml
<CustomField>
    <fullName>misei1check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>未成①チェック</label>
    <type>Checkbox</type>
</CustomField>