force-app/main/default/objects/Steel_delivery__c/fields/misei2check__c.field-meta.xml
<CustomField>
    <fullName>misei2check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>未成②チェック</label>
    <type>Checkbox</type>
</CustomField>