force-app/main/default/objects/Steel_delivery__c/fields/Opp__c.field-meta.xml
<CustomField>
    <fullName>Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>納品トン数</relationshipLabel>
    <relationshipName>Opp1</relationshipName>
    <type>Lookup</type>
</CustomField>