force-app/main/default/objects/Steel_delivery__c/fields/OrderAmount__c.field-meta.xml
<CustomField>
    <fullName>OrderAmount__c</fullName>
    <label>契約金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>