force-app/main/default/objects/Steel_delivery__c/fields/OrderAmountGoal__c.field-meta.xml
<CustomField>
    <fullName>OrderAmountGoal__c</fullName>
    <label>目標契約金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>