force-app/main/default/objects/Steel_delivery__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <label>受注日</label>
    <type>Date</type>
</CustomField>