force-app/main/default/objects/Steel_delivery__c/fields/seikyusyoseisakakunin__c.field-meta.xml
<CustomField>
    <fullName>seikyusyoseisakakunin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求書の精査確認</label>
    <type>Checkbox</type>
</CustomField>