force-app/main/default/objects/Steel_delivery__c/fields/sekkeihenkou__c.field-meta.xml
<CustomField>
    <fullName>sekkeihenkou__c</fullName>
    <label>設計変更</label>
    <length>255</length>
    <type>Text</type>
</CustomField>