force-app/main/default/objects/Steel_delivery__c/fields/sekkeisya__c.field-meta.xml
<CustomField>
    <fullName>sekkeisya__c</fullName>
    <label>設計者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>