force-app/main/default/objects/Steel_delivery__c/fields/sekouzyouken__c.field-meta.xml
<CustomField>
    <fullName>sekouzyouken__c</fullName>
    <label>施工条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>