force-app/main/default/objects/Steel_delivery__c/fields/sesyu__c.field-meta.xml
<CustomField>
    <fullName>sesyu__c</fullName>
    <label>施主</label>
    <length>255</length>
    <type>Text</type>
</CustomField>