force-app/main/default/objects/Steel_delivery__c/fields/souteibugakari__c.field-meta.xml
<CustomField>
    <fullName>souteibugakari__c</fullName>
    <label>想定歩掛</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>