force-app/main/default/objects/Steel_delivery__c/fields/syokutyoutotyuhyouka__c.field-meta.xml
<CustomField>
    <fullName>syokutyoutotyuhyouka__c</fullName>
    <label>職長途中評価</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>