force-app/main/default/objects/Steel_delivery__c/fields/targetDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>targetDeliveryDate__c</fullName>
    <label>納品予定日</label>
    <type>Date</type>
</CustomField>