force-app/main/default/objects/Steel_delivery__c/fields/targetDeliveryMonth__c.field-meta.xml
<CustomField>
    <fullName>targetDeliveryMonth__c</fullName>
    <formula>TEXT ( YEAR (  targetDeliveryDate__c  ) ) &amp; &quot;年&quot; &amp; TEXT ( MONTH (  targetDeliveryDate__c  )) &amp; &quot;月&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>納品予定月</label>
    <type>Text</type>
</CustomField>