force-app/main/default/objects/Steel_delivery__c/fields/toritsukehanhenotyumonsyo__c.field-meta.xml
<CustomField>
    <fullName>toritsukehanhenotyumonsyo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取付班への注文書</label>
    <type>Checkbox</type>
</CustomField>