force-app/main/default/objects/Steel_delivery__c/fields/tyumonsyo__c.field-meta.xml
<CustomField>
    <fullName>tyumonsyo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>注文書</label>
    <type>Checkbox</type>
</CustomField>