force-app/main/default/objects/Steel_delivery__c/fields/X2021_11__c.field-meta.xml
<CustomField>
    <fullName>X2021_11__c</fullName>
    <label>2021年11月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>