force-app/main/default/objects/Steel_delivery__c/fields/X2021_12__c.field-meta.xml
<CustomField>
    <fullName>X2021_12__c</fullName>
    <label>2021年12月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>