force-app/main/default/objects/Steel_delivery__c/fields/zyutyuumaecheck__c.field-meta.xml
<CustomField>
    <fullName>zyutyuumaecheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>受注前チェック</label>
    <type>Checkbox</type>
</CustomField>