force-app/main/default/objects/Steel_delivery__c/recordTypes/Actual.recordType-meta.xml
<RecordType>
    <fullName>Actual</fullName>
    <active>true</active>
    <label>実績</label>
</RecordType>