force-app/main/default/objects/Steel_delivery__c/recordTypes/Budget.recordType-meta.xml
<RecordType>
    <fullName>Budget</fullName>
    <active>true</active>
    <label>予算</label>
</RecordType>